--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ nav{
     margin-right: 1rem;
 }
 .container{
-    width: 70vw;
+    /* width: 70vw; */
     margin: auto;
     padding: 1.5rem 2rem 1.5rem 2rem; 
     font-family: 'Roboto';
